k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnn-classifier-service
  namespace: mlops-prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cnn-classifier
